# doubri-rs

./: CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml  test.yaml
crates/doubri-cli/: Cargo.toml
crates/doubri-cli/src/: cmd_apply_each.rs  cmd_apply_whole.rs  cmd_dedup.rs  cmd_merge.rs  cmd_minhash.rs  cmd_similarity.rs  main.rs
crates/doubri-core/: Cargo.toml
crates/doubri-core/benches/: bench.rs  bench_light.rs
crates/doubri-core/src/: apply.rs  dedup.rs  error.rs  format.rs  hash.rs  lib.rs  merge.rs  minhash.rs  ngram.rs  similarity.rs
