[package]
name = "doubri"
version = "0.1.1"
edition = "2024"
license = "MIT"
publish = false
repository = "https://github.com/hirosassa/doubri-rs"

[package.metadata.dist]
dist = true

[dependencies]
doubri-core = { path = "../doubri-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
